loopfor.LoopCourse.scala.error
Compilation error:
LoopCourse:3: error: ';' expected but ',' found.
  avance(8);gauche();avance(8);gauche();avance(8);gauche();avance(8),gauche()
                                                                    ^